--- a/0724_02_Colorbag.html
+++ b/0724_02_Colorbag.html
@@ -79,22 +79,39 @@
                 <p>숄더백<br>브라운/블랙/아이보리/핑크/핫핑크</p></li>
             </ul>
         </div>
+        <div class="notice">
+            <ul class="clearfix">
+                <li>
+                    <ul>
+                        <li><img src="/images/colorbag/images/title_notice.jpg" alt="title_notice"></li>
+                        <li>[2012-12-25] 사랑해요 고객님 이벤트에...</li>
+                        <li>[2012-12-25] 신규회원 가입고객 이벤트 응모...</li>
+                        <li>[2012-12-25] 후기를 남겨주시면 할인쿠폰...</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="clearfix">
+                        <li><img src="/images/colorbag/images/csbanner.jpg" alt="csbanner"></li>
+                        <li><img src="/images/colorbag/images/csbanner-02.jpg" alt="csbanner-02"></li>
+                        <li><img src="/images/colorbag/images/csbanner-03.jpg" alt="csbanner-03"></li>
+                    </ul>
+                </li>
+                <li><img src="/images/colorbag/images/cscenter.jpg" alt="cscenter"></li>
+            </ul>
+        </div>
         <footer>
-            <table>
-                <h4>NOTICE</h4>
-                <tr>
-                    <td>[2012-12-25]</td>
-                    <td>사랑해요 고객님 이벤트에...</td>
-                </tr>
-                <tr>
-                    <td>[2012-12-25]</td>
-                    <td>신규회원 가입고객 이벤트 응모...</td>
-                </tr>
-                <tr>
-                    <td>[2012-12-25]</td>
-                    <td>후기를 남겨주시면 할인쿠폰...</td>
-                </tr>
-            </table>
+            <div class="foot_top">
+                <ul class="clearfix">
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">개인정보취급방침</a></li>
+                    <li><a href="#">서비스이용약관</a></li>
+                    <li><a href="#">이메일문의</a></li>
+                </ul>
+            </div>
+            <div class="foot_bottom">
+                <p>상호:(주)디자인아트 플러스. 대표:임화연. 주소:서울구로구 구로동 에이스 하이앤드타워2차.</p>
+                <p>copyrights ⓒ 2000 designartplus allrights reserved.</p>
+            </div>
         </footer>
     </div>
 </body>
