--- a/0721_08_svg2_2.html
+++ b/0721_08_svg2_2.html
@@ -71,6 +71,10 @@
         width: 70%;
         overflow: hidden;
       }
+      .contents .left .water{
+        border: 1px solid;
+        clear: both;
+      }
       .contents .left p {
         text-align: justify;
         padding: 20px 0;
