--- a/0721_08_svg2_2.html
+++ b/0721_08_svg2_2.html
@@ -69,11 +69,10 @@
       }
       .contents .left {
         width: 70%;
-        overflow: hidden;
       }
-      .contents .left .water{
-        border: 1px solid;
+      .contents .left .water {
         clear: both;
+        overflow: hidden;
       }
       .contents .left p {
         text-align: justify;
@@ -89,6 +88,17 @@
         width: 30%;
         padding-left: 50px;
         box-sizing: border-box;
+      }
+      footer {
+        background: #ccc;
+        padding: 50px 0;
+        margin-top: 50px;
+      }
+      footer .foot {
+        width: 100%;
+        max-width: 1001px;
+        margin: 0 auto;
+        text-align: center;
       }
     </style>
   </head>
@@ -156,6 +166,11 @@
           </ul>
         </div>
       </div>
+      <footer>
+        <div class="foot">
+          <p>Copyright ⓒ 2012. The Growth Clinic Story. Since 1998.</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
