--- a/0726_01_happybath.html
+++ b/0726_01_happybath.html
@@ -5,56 +5,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happybath</title>
-    <link rel="stylesheet" href="0726_01_happybath.css">
+    <link rel="stylesheet" href="0726_01_happybath.css" />
   </head>
   <body>
     <div id="wrap">
-        <div class="top">
-            <div class="topmenu">
-                <img src="/images/happybath2/favicon.ico" alt="favicon" class="logo">
-                <ul>
-                    <li><a href="#">로그인</a></li>
-                    <li><a href="#">구매하기</a></li>
-                    <li><a href="#">매장찾기</a></li>
-                    <li><img src="/images/happybath2/bg-header-searchbtn.png" alt="bg-header-searchbtn"></li>
-                </ul>
-            </div>
+      <div class="top">
+        <div class="topmenu">
+          <div class="logo">
+            <img src="/images/happybath2/favicon.ico" alt="favicon" />
+          </div>
+          <ul>
+            <li><a href="#">로그인</a></li>
+            <li><a href="#">구매하기</a></li>
+            <li><a href="#">매장찾기</a></li>
+            <li>
+              <img
+                src="/images/happybath2/bg-header-searchbtn.png"
+                alt="bg-header-searchbtn" />
+            </li>
+          </ul>
         </div>
-        <div class="happy">
-          <div class="left">
-            <h2>해피바스 선물</h2>
+        <div class="menu">
             <ul>
-              <li class="first">
-                <p class="title">내추럴 성분</p>
-                <div class="box">
-                  <p>해피바스가 담고 있는<br />'내추럴 성분'이 궁금하다면?</p>
-                  <p>more</p>
-                </div>
-              </li>
-              <li class="second">
-                <p class="title">풍성한 향</p>
-                <div class="box">
-                  <p>해피바스에서 펼쳐지는<br />'풍성한 향'이 궁금하다면?</p>
-                  <p>more</p>
-                </div>
-              </li>
-              <li class="third">
-                <p class="title">즐거운 경험</p>
-                <div class="box">
-                  <p>해피바스가 이끄는<br />'즐거운 경험'이 궁금하다면?</p>
-                  <p>more</p>
-                </div>
-              </li>
+                <li><a href="#">해피바스<strong>이야기</strong></a></li>
+                <li><a href="#">해피바스<strong>선물</strong></a></li>
+                <li><a href="#">해피바스<strong>뷰티톡</strong></a></li>
+                <li><a href="#">해피바스<strong>제품</strong></a></li>
             </ul>
-          </div>
-          <div class="right">
-            <h2>해피바스 뷰티톡</h2>
-            <div>
-              <p>피부 고민에 따른 뷰티팁을 드려요</p>
-              <a href="#">more</a>
+        </div>
+      </div>
+      <div class="visual">
+        <div class="main">
+            <img src="/images/happybath2/20220413_final_original-collection-bodywash_main_kv_pc.jpg" alt="mainbodywash">
+        </div>
+        <div class="sub">
+            <h3>베스트셀러 아이템</h3>
+            <ul>
+                <li><a href="#"><img src="/images/happybath2/20220608_micro-micellar_deep-cleansing_front(120x300)_1.png" alt="micro"><p><br>해피바스 마이크로미셀라<br> 딥 클렌징 폼</p></a></li>
+                <li><a href="#"><img src="/images/happybath2/220405_final_Happybath_bestseller_thumbnail01_pc.png" alt="bestseller01"><p><br>해피바스 오리지널컬렉션<br> 오리지널 바디워시</p></a></li>
+                <li><a href="#"><img src="/images/happybath2/220405_final_Happybath_bestseller_thumbnail02_pc.png" alt="bestseller02"><p><br>해피바스 오리지널컬렉션<br>베이비파우더 바디워시</p></a></li>
+                <li><a href="#"><img src="/images/happybath2/220405_final_Happybath_bestseller_thumbnail03_pc.png" alt="bestseller03"><p><br>해피바스 오리지널컬렉션<br> 솝 라벤더 바디워시</p></a></li>
+            </ul>
+        </div>
+        <div class="bottom">
+            <div class="btmleft">
+                    <h3>제품 리뷰</h3>
+                <div class="inner">
+                    <div class="leftbox">
+                        <a href="#"><img src="/images/happybath2/20220523_original-collection_cherry-blossom_231x251.png" alt="cherry-blossom"></a>
+                    </div>
+                    <div class="rightbox">
+                        <p><a href="#">[오리지널컬렉션 체리블로섬 바디워시]</a></p>
+                        <p class="star">
+                            <span>fkrr*****</span>
+                            <a href="#"><img src="/images/happybath2/detail-review-star5.png" alt="review-star5"></a>
+                        </p>
+                        <p><a href="#">정말 오랜만에 향기도 좋고 성분도 착한 바디워시를 만났어요! 마일드한 세정력도 좋고 저자극의 바디워시입니다.</a></p>
+                    </div>
+                </div>
             </div>
+            <div class="btmright">
+                <h3>해피바스 소식</h3>
+                <a href="#"><img src="/images/happybath2/220600_final_Happybath_news-banner_main_pc.jpg" alt="news-banner"></a>
+            </div>
+        </div>
+      </div>
+      <div class="happy">
+        <div class="left">
+          <h3>해피바스 선물</h3>
+          <ul>
+            <li class="first">
+              <p class="title">내추럴 성분</p>
+              <div class="box">
+                <p>해피바스가 담고 있는<br />'내추럴 성분'이 궁금하다면?</p>
+                <p>more</p>
+              </div>
+            </li>
+            <li class="second">
+              <p class="title">풍성한 향</p>
+              <div class="box">
+                <p>해피바스에서 펼쳐지는<br />'풍성한 향'이 궁금하다면?</p>
+                <p>more</p>
+              </div>
+            </li>
+            <li class="third">
+              <p class="title">즐거운 경험</p>
+              <div class="box">
+                <p>해피바스가 이끄는<br />'즐거운 경험'이 궁금하다면?</p>
+                <p>more</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="right">
+          <h3>해피바스 뷰티톡</h3>
+          <div>
+            <p>피부 고민에 따른 뷰티팁을 드려요</p>
+            <a href="#">more</a>
           </div>
         </div>
+      </div>
     </div>
   </body>
 </html>
