--- a/images/happybath2/0727_04_footer.html
+++ b/images/happybath2/0727_04_footer.html
@@ -20,6 +20,50 @@
       body {
         font-family: Arial, 나눔고딕, sans-serif;
       }
+      .foot_sns{
+        background: #f8f8f8;
+      }
+      .foot_sns ul{
+        display: flex;
+        justify-content: center;
+      }
+      .foot_bottom{
+        position: relative;
+        width: 1000px;
+        margin: 0 auto;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .foot_bottom .foot{
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .foot_bottom .foot ul{
+        display: flex;
+        font-size: 13px;
+      }
+      .foot_bottom .foot p{
+        font-size: 12px;
+      }
+      .foot_bottom .foot ul li::after{
+        content: "|";
+        padding: 0 10px;
+      }
+      .foot_bottom .foot ul li:last-child::after{
+        content: "";
+      }
+      .foot_bottom img{
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 66px;
+      }
     </style>
   </head>
   <body>
@@ -40,7 +84,13 @@
                     <li><a href="#">뷰티포인트</a></li>
                     <li><a href="#">사이트맵</a></li>
                 </ul>
+                <ul>
+                    <li>고객상담팀(수신자 요금 부담) 080-023-5454</li>
+                    <li>상담시간 월~금 : AM 09:00 ~ PM 06:00</li>
+                </ul>
+                <p>© AMOREPACIFIC CORPORATION. All rights reserved.</p>
             </div>
+            <img src="/images/happybath2/img_wa_20221129.png" alt="wa">
         </div>
     </footer>
   </body>
