--- a/images/happybath2/0727_01_top.html
+++ b/images/happybath2/0727_01_top.html
@@ -46,16 +46,58 @@
         margin-left: 20px;
       }
       nav {
+        position: relative;
+      }
+      nav > ul {
         width: 800px;
         margin: 0 auto;
-      }
-      nav ul {
         display: flex;
         justify-content: space-between;
+      }
+      nav > ul > li{
+        position: relative;
       }
       nav > ul > li > a {
         font-size: 18px;
         line-height: 50px;
+      }
+      nav > ul > li > ul{
+        position: absolute;
+        left: 0;
+        top: 51px;
+        margin-top: 20px;
+        z-index: 1;
+        height: 0;
+        overflow: hidden;
+        transition: height 0.5s;
+      }
+      nav:hover > ul > li > ul{
+        height: 200px;
+      }
+      nav > ul > li > ul > li > a{
+        line-height: 40px;
+      }
+      nav ul.sub{
+        margin-left: 10px;
+      }
+      nav ul.sub li a{
+        line-height: 30px;
+      }
+      nav ul.sub li a::before{
+        content: url(/images/happybath2/gnb_3depth_bullet.png);
+        padding: 10px 10px 0 0;
+      }
+      nav .bg{
+        position: absolute;
+        left: 0;
+        top: 51px;
+        width: 100%;
+        height: 0;
+        background: #fff;
+        transition: height 0.5s;
+      }
+      nav:hover .bg{
+        height: 200px;
       }
       .slide {
         width: 1600px;
@@ -101,11 +143,43 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#">해피바스 이야기</a></li>
-            <li><a href="#">해피바스 선물</a></li>
-            <li><a href="#">해피바스 뷰티톡</a></li>
-            <li><a href="#">해피바스 제품</a></li>
+            <li>
+              <a href="#">해피바스 이야기</a>
+              <ul>
+                <li><a href="#">브랜드 스토리</a></li>
+                <li><a href="#">영상 갤러리</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">해피바스 선물</a>
+              <ul>
+                <li>
+                  <a href="#">행복의 순간</a>
+                  <ul class="sub">
+                    <li><a href="#">내추럴 성분</a></li>
+                    <li><a href="#">풍성한 향</a></li>
+                    <li><a href="#">즐거운 경험</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">해피바스 뷰티톡</a>
+              <ul>
+                <li><a href="#">피부고민X뷰티팁</a></li>
+                <li><a href="#">자산화 원료</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">해피바스 제품</a>
+              <ul>
+                <li><a href="#">유형별제품</a></li>
+                <li><a href="#">고민별제품</a></li>
+                <li><a href="#">전체제품보기</a></li>
+              </ul>
+            </li>
           </ul>
+          <div class="bg"></div>
         </nav>
       </header>
       <div class="slide"></div>
