--- a/images/happybath2/0727_01_top.html
+++ b/images/happybath2/0727_01_top.html
@@ -58,8 +58,19 @@
         position: relative;
       }
       nav > ul > li > a {
+        display: inline-block;
+        position: relative;
         font-size: 18px;
         line-height: 50px;
+      }
+      nav > ul > li:hover > a::after{
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        content: "";
+        width: 100%;
+        height: 2px;
+        background: #333;
       }
       nav > ul > li > ul{
         position: absolute;
@@ -76,6 +87,9 @@
       }
       nav > ul > li > ul > li > a{
         line-height: 40px;
+      }
+      nav > ul > li > ul > li a:hover{
+        text-decoration: underline;
       }
       nav ul.sub{
         margin-left: 10px;
