--- a/images/paulsmith/images/0728_02_paulsmith.html
+++ b/images/paulsmith/images/0728_02_paulsmith.html
@@ -33,7 +33,104 @@
                 </ul>
             </div>
         </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">SALE</a></li>
+                <li><a href="#">NEW ARRIVALS</a></li>
+                <li><a href="#">MENS</a></li>
+                <li><a href="#">WOMENS</a></li>
+                <li><a href="#">JUNIOR</a></li>
+                <li><a href="#">STORIES</a></li>
+            </ul>
+        </div>
+        <div class="gnb">
+            <ul>
+                <li><a href="#">FREE CLICK & COLLECT</a></li>
+                <li><a href="#">FREE SHOPPING ON ORDERS OVER ￡200</a></li>
+                <li><a href="#">FREE RETURNS</a></li>
+            </ul>
+        </div>
       </header>
+      <div class="visual">
+        <img src="paul_12.jpg" alt="main">
+      </div>
+      <section>
+        <h3>Shop by Category</h3>
+        <ul>
+            <li><a href="#"><img src="paul_14.jpg" alt="paul_14"></a></li>
+            <li><a href="#"><img src="paul_15.gif" alt="paul_15"></a></li>
+            <li><a href="#"><img src="paul_16.jpg" alt="paul_16"></a></li>
+        </ul>
+        <h3>Shop by Collection</h3>
+        <ul>
+            <li><a href="#"><img src="paul_18.jpg" alt="paul_18"></a></li>
+            <li><a href="#"><img src="paul_19.jpg" alt="paul_19"></a></li>
+            <li><a href="#"><img src="paul_20.jpg" alt="paul_20"></a></li>
+            <li><a href="#"><img src="paul_21.jpg" alt="paul_21"></a></li>
+        </ul>
+      </section>
+      <footer>
+        <div class="foot">
+            <div class="foot-top">
+                <ul>
+                    <li>
+                        <a href="#">CUSTOMER SERVICES</a>
+                        <ul>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Paul Smith Price Match</a></li>
+                            <li><a href="#">Payment Methods</a></li>
+                            <li><a href="#">Returns</a></li>
+                            <li><a href="#">Shopping</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">YOUR PAUL SMITH</a>
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Gift Cards</a></li>
+                            <li><a href="#">Check Your Gift Card Balance</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">ABOUT PAUL SMITH</a>
+                        <ul>
+                            <li><a href="#">Company History</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Shop Locater</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Email Updates</a>
+                        <div>
+                            <input type="text" value="Enter your e-mail address" onfocus="this.value=''"><input type="button" value="Subscribe">
+                        </div>
+                        <ul>
+                            <li><a href="#"><img src="paul_24.gif" alt="paul_24"></a></li>
+                            <li><a href="#"><img src="paul_26.gif" alt="paul_26"></a></li>
+                            <li><a href="#"><img src="paul_28.gif" alt="paul_28"></a></li>
+                            <li><a href="#"><img src="paul_30.gif" alt="paul_30"></a></li>
+                            <li><a href="#"><img src="paul_32.gif" alt="paul_32"></a></li>
+                            <li><a href="#"><img src="paul_34.gif" alt="paul_34"></a></li>
+                            <li><a href="#"><img src="paul_36.gif" alt="paul_36"></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            </div>
+                <div class="foot-bottom">
+                    <div class="A">
+                        <div class="logo">
+                            <img src="paul_03.png" alt="paul_03">
+                        </div>
+                        <ul>
+                            <li><a href="#">ⓒ Paul Smith</a></li>
+                            <li><a href="#">Terms&conditions</a></li>
+                            <li><a href="#">Privacy&Cookie Policy</a></li>
+                        </ul>
+                        <p><img src="paul_46_2.png" alt="paul_46_2"></p>
+                    </div>
+                </div>
+      </footer>
     </div>
   </body>
 </html>
