--- a/0801_12_blendmode.html
+++ b/0801_12_blendmode.html
@@ -71,6 +71,12 @@
         .bg:nth-child(16) .text{
             mix-blend-mode: soft-light;
         }
+        section{
+            background: #ccc;
+        }
+        section img{
+            mix-blend-mode: multiply;
+        }
     </style>
   </head>
   <body>
@@ -122,5 +128,8 @@
     <div class="bg">
         <div class="text">mix-blend-mode: soft-light</div>
     </div>
+    <section>
+        <img src="/images/photo2.jpg" alt="photo2">
+    </section>
   </body>
 </html>
