--- a/0802_02.html
+++ b/0802_02.html
@@ -37,6 +37,14 @@
         width: 300px;
         background: #ccc;
       }
+      @media screen and (max-width:1280px) {
+        .main{
+            width: 60%;
+        }
+        .side{
+            width: 20%;
+        }
+      }
     </style>
   </head>
   <body>
