--- a/몰디브/index.html
+++ b/몰디브/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
-    <title>Document</title>
+    <title>Maldives</title>
 </head>
 <body>
     <header>
@@ -40,6 +40,71 @@
     <section id="contents">
         <article>
             <div class="bg bg1"><span>Maldives</span></div>
+        </article>
+        <article>
+            <div class="txt">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p>
+                    <strong>A Whole New World</strong><br>
+                    <em>I can show you the world. Shining Shimmering Splended<br>
+                        Tell me when you decide let me be in your heart.</em>
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="txt">
+                <i class="fa-solid fa-sync fa-spin"></i>
+                <p>
+                    <strong>Reservation</strong>
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="bg bg2"><span>Suite</span></div>
+        </article>
+        <article>
+            <div class="bg bg3"><span>Surf</span></div>
+        </article>
+        <article>
+            <div class="txt">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p>
+                    <strong>A Dazzling Place</strong><br>
+                    <em>I can show you the world. Shining Shimmering Splended<br>
+                        Tell me when you decide.</em>
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="bg bg4"><span>Sauna</span></div>
+        </article>
+        <article>
+            <div class="txt">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p>
+                    <strong>Hot spot</strong><br>
+                    <em>a best place to have a vacation<br>
+                        tell me when you decide.</em>
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="bg bg5"><span>Dinner</span></div>
+        </article>
+        <article>
+            <div class="bg bg6"><span>Spa</span></div>
+        </article>
+        <article>
+            <div class="txt">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p>
+                    <strong>Open Space</strong><br>
+                    <em>I can show you the world.</em>
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="bg bg7"><span>Tour</span></div>
         </article>
     </section>
 </body>
