--- a/javascript/0807_03.html
+++ b/javascript/0807_03.html
@@ -5,22 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>document</title>
-    <style>
-      #demo {
-        color: blue;
-      }
-    </style>
+    <style></style>
     <script></script>
   </head>
   <body>
-    <input type="button" value="a출력" onclick="my()">
+    <input type="button" value="a출력" onclick="my()" />
+    <h2 id="demo"></h2>
     <script>
-        let a = 100;
-        function my(){
-            let a = 200;
-            document.write(a);
-        }
-        document.write(a);
+      let a = 100;
+      function my() {
+        let a = 200;
+        // document.write(a);
+        document.getElementById("demo").innerHTML = a;
+      }
+      document.write(a);
     </script>
   </body>
 </html>
