--- a/javascript/0808_06_clickevent.html
+++ b/javascript/0808_06_clickevent.html
@@ -40,6 +40,7 @@
         left: 0;
         top: 0;
         /* z-index: -999; */
+        z-index: 1;
         transform: translate(-100%, 0);
         transition: transform 0.4s ease-in-out;
       }
