--- a/javascript/0809_09_if.html
+++ b/javascript/0809_09_if.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <script>
-        let num = prompt("숫자를 입력하세요");
-      //   let result = num % 2 == 0 ? "짝수" : "홀수";
+      let num = prompt("점수를 입력하세요");
       // if(조건식){
       //     참인 실행문;
       // }
@@ -17,13 +16,20 @@
       //     거짓인 실행문;
       // }
       let result = "";
-      if(num%2==0{
-          result="짝수";
+      if (num >= 90) {
+        result = "A";
+      } else if (num >= 80) {
+        result = "B";
+      } else if (num >= 70) {
+        result = "C";
+      } else if (num >= 60) {
+        result = "D";
+      } else {
+        result = "F";
       }
-      else{
-          result="홀수";
-      }
-        document.write("당신이 입력한 숫자 " + num + "는(은) " + result + "입니다.");
+      document.write(
+        "당신이 입력한 점수 " + num + "는(은) " + result + "학점 입니다."
+      );
     </script>
   </body>
 </html>
