--- a/javascript/0822_01_string.html
+++ b/javascript/0822_01_string.html
@@ -102,7 +102,7 @@
           txt3.replace(/microsoft/g, "마이크로소프트") +
           "<br>"
       );
-      // /~~/g : 
+      // /~~/g : 정규식, 전역. (global) 대소문자 구분 O
       document.write(
         "replace : " +
           txt3.replace(/Microsoft/g, "마이크로소프트") +
