--- a/javascript/0823_13_swiper.html
+++ b/javascript/0823_13_swiper.html
@@ -34,7 +34,7 @@
       .swiper-slide {
         text-align: center;
         font-size: 18px;
-        background: #fff;
+        background: #ccc;
         display: flex;
         justify-content: center;
         align-items: center;
