--- a/0828_01.html
+++ b/0828_01.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="shortcut icon" href="images/ms-icon-310x310.png" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
