--- a/jQuery/0829_01_selector.html
+++ b/jQuery/0829_01_selector.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script>
-        $(document).ready(function(){
+        /* $(document).ready(function(){
+            $("p").text("변경되었습니다");
+        }) */
+        $(function(){
             $("p").text("변경되었습니다");
         })
         // 문서를 먼저 읽어서 script가 head 안에 있음에도 실행되게 만듦
