--- a/jQuery/0830_03.html
+++ b/jQuery/0830_03.html
@@ -8,15 +8,40 @@
     <title>Document</title>
     <script>
         $(function(){
-            $("ul").append('<li class="page">page</li>');
-            // ul태그 자식요소 뒤에 추가
-            $("ul").prepend('<li class="page">page</li>');
-            // ul태그 자식요소 앞에 추가
-            $('<li class="page">page</li>').appendTo("ul")
-            $('<li class="page">page</li>').prependTo("ul")
-            $("ul").clone().prependTo("body");
-            $("ul").clone().appendTo("body");
-            $("ul:first").wrap('<div class="wrap"></div>')
+            // $("ul").append('<li class="page">page</li>');
+            // // ul태그 자식요소 뒤에 추가
+            // $("ul").prepend('<li class="page">page</li>');
+            // // ul태그 자식요소 앞에 추가
+            // $('<li class="page">page</li>').appendTo("ul");
+            // $('<li class="page">page</li>').prependTo("ul");
+            // $("ul").clone().prependTo("body");
+            // $("ul").clone().appendTo("body");
+            // $("ul").wrap('<div class="wrap"></div>');
+            // $("ul li").wrapInner('<div class="wrap"></div>');
+            // $("ul").clone().prependTo("body");
+            // $("ul").wrapAll('<div class="wrap"></div>');
+            // $(".html").after('<li class="page">page</li>');
+            // $(".html").before('<li class="page">page</li>');
+            // $('<li class="css3">css3</li>').insertAfter(".css");
+            // $('<li class="css3">css3</li>').insertBefore(".css");
+            // $(".page").replaceWith('<li id="con">변경</li>');
+            let txt = $(".html").text();
+            console.log(txt);
+            // let txt2 = txt.replace("html","페이지");
+            // console.log(txt2);
+            // $(".html").text(txt2);
+            // let txt3 = txt.slice(start, end);
+            // let txt3 = txt.substr(start, length);
+            // let txt3 = txt.substring(start, end);
+            // let txt3 = txt.slice(0, 2); // html 이라는 문자 중 ht 를 추출
+            // let txt3 = txt.slice(-2, -1);
+            let txt3 = txt.slice(-2);
+            console.log(txt3);
+            // let txt4 = txt.substr(0, 2); // html 이라는 문자 중 ht 를 추출
+            let txt4 = txt.substr(-2, 2); // html 이라는 문자 중 ht 를 추출
+            console.log(txt4);
+            let txt5 = txt.substring(-3, 2);
+            console.log(txt5);
         })
     </script>
   </head>
