--- a/jQuery/0926_01.html
+++ b/jQuery/0926_01.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/jquery-3.7.1.min.js"></script>
-    <meta http-equiv="refresh" content="5;url=0926_02.html">
+    <!-- <meta http-equiv="refresh" content="5;url=0926_02.html"> -->
     <title>Document</title>
     <style>
       * {
@@ -19,11 +19,22 @@
         text-decoration: none;
         color: #333;
       }
-      img{
-        width: 300px;
-        animation: ani 5s forwards;
+      .cover {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        /* display: none; */
       }
-      @keyframes ani{
+      .main {
+        display: none;
+      }
+      img {
+        position: relative;
+        width: 300px;
+        /* animation: ani 5s forwards; */
+      }
+      /* @keyframes ani{
         0%{
           transform: translateY(100px);
           opacity: 0;
@@ -32,15 +43,45 @@
           transform: translateY(0px);
           opacity: 1;
         }
-      }
+      } */
     </style>
     <script>
       $(function () {
-        
+        $(".cover img")
+          .css({ top: "0", opacity: "0" })
+          .animate({ top: "100px", opacity: "1" }, 5000, function () {
+            $(".cover")
+              .css({
+                opacity: "0",
+              })
+              .animate(
+                {
+                  display: "none",
+                },
+                1000
+              );
+            $(".main")
+              .css({
+                opacity: "1",
+              })
+              .delay(1000)
+              .animate(
+                {
+                  display: "block",
+                },
+                1000
+              );
+          });
       });
     </script>
   </head>
   <body>
-    <img src="../images/photo1.jpg" alt="photo1">
+    <!-- <img src="../images/photo1.jpg" alt="photo1"> -->
+    <div class="cover">
+      <img src="../images/photo1.jpg" alt="photo1" />
+    </div>
+    <div class="main">
+      <img src="../images/photo2.jpg" alt="photo1" />
+    </div>
   </body>
 </html>
